<resources>
    <string name="app_name">브랜드리서치</string>
    <string name="cancel">취소</string>
    <string name="participate">참여</string>
    <string name="next">다음</string>
    <string name="brandLikeDislike">좋아요 %1$d명, 싫어요 %2$d명</string>
    <string name="brandRanking">전체 순위 %1$d위, 카테고리 순위 %2$d위 입니다.</string>
    <string name="setPref">%1$s에 대한 느낌 표현에 참여해보세요.</string>
    <string name="close">닫기</string>
    <string name="fav_brands">내가 좋아하는 브랜드들</string>
    <string name="like">좋아요 %1$d개</string>
    <string name="ranking">브랜드 순위</string>
    <string-array name="brand_category">
        <item>전체</item>
        <item>화장품</item>
        <item>커피</item>
        <item>백화점</item>
    </string-array>
    <string-array name="navMenuItems">
        <item>HOME</item>
        <item>뉴스피드</item>
        <item>리뷰</item>
        <item>설문조사</item>
        <item>쿠폰</item>
        <item>EVENT</item>
    </string-array>
    <string-array name="picSelection">
        <item>카메라</item>
        <item>앨범</item>
    </string-array>
    <string name="category">카테고리</string>
    <string name="couponBox">쿠폰함</string>
    <string name="kakao_app_key">36ab21fc5ff5c855088e8a506a54736d</string>
    <string name="facebook_app_id">735180913291745</string>
    <string name="contents">콘텐츠</string>
    <string name="content_page">콘텐츠 페이지</string>
    <string name="email">이메일</string>
    <string name="password">비밀번호</string>
    <string name="join">회원가입</string>
    <string name="find_password">임시 비밀번호 받기 </string>
    <string name="account_info">계정정보</string>
    <string name="email_hint">example@example.com</string>
    <string name="password_hint">비밀번호 (8~16자 이내)</string>
    <string name="agree_email">이메일 수신 동의</string>
    <string name="birthdate">생년월일</string>
    <string name="birthdate_hint">8자리 입력 (예:19880123)</string>
    <string name="gender">성별</string>
    <string name="male">남성</string>
    <string name="female">여성</string>
    <string name="other">기타</string>
    <string name="policy_agreement">약관동의</string>
    <string name="termsofuse">이용약관 동의</string>
    <string name="privacy">개인정보 수집이용 동의</string>
    <string name="agree">동의</string>
    <string name="agree_all">전체동의</string>
    <string name="phone_num_verification">휴대폰 인증</string>
    <string name="must_enter_phone_num">휴대폰 인증을 하셔야 가입이 완료됩니다.</string>
    <string name="send_verification_num">인증번호 전송</string>
    <string name="enter_verification_num">인증번호 입력</string>
    <string name="verify">인증</string>
    <string name="login">로그인</string>
    <string name="message_email_empty">이메일을 입력하시기 바랍니다.</string>
    <string name="message_email_wrong_format">이메일의 포맷을 확인하시기 바랍니다.</string>
    <string name="message_password_length">비밀번호는 8~16자 이내로 작성하시기 바랍니다.</string>
    <string name="ok">확인</string>
    <string name="message_agree_TOU">사용약관에 동의바랍니다.</string>
    <string name="message_agree_privacy_policy">개인정보  이용약관에 동의바랍니다.</string>
    <string name="message_email_already_exists">이미 사용중인 이메일입니다.</string>
    <string name="message_password_must_enter">비밀번호를 입력하시기 바랍니다.</string>
    <string name="message_phone_number_wrong_digit">잘못된 전화번호 입니다.</string>
    <string name="message_email_password_empty">이메일 혹은 비밀번호를 입력해 주십시오.</string>
    <string name="message_invalid_email_password">잘못된 이메일 혹은 비밀번호 입니다.</string>
    <string name="logout">로그아웃</string>
    <string name="question_select_a_fav_brand">다음 중 가장 선호하는 브랜드를 선택해 주세요.</string>
    <string name="message_you_voted">투표에 참여해주셔서 감사합니다.</string>
    <string name="myProfile">내 정보</string>
    <string name="name">이름</string>
    <string name="change">변경</string>
    <string name="message_name_must_be_longer_than_zero">이름은 0자 이상이어야 합니다.</string>
    <string name="message_password_length_4_20">비밀번호는 8~16자 이어야 합니다.</string>
    <string name="message_failed_to_change_name">에러가 발생했습니다. 다시 시도해 주십시오.</string>
    <string name="message_failed_to_change_password">비밀번호를 변경하는데 실패하였습니다. 다시 시도해 주십시오.</string>
    <string name="message_name_change_succeeded">이름 변경이 완료되었습니다.</string>
    <string name="message_password_change_succeeded">비밀번호 변경이 완료되었습니다.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="share">공유</string>
    <string name="hint_phonenumber">전화번호(\'-\'없이 번호만 입력)</string>
    <string name="find_email">이메일 찾기</string>
    <string name="label_enter_phonno_to_find_email">가입하신 전화번호로 이메일을 찾습니다.</string>
    <string name="label_get_temp_password">가입하신 이메일로 임시 비밀번호를 발송합니다.</string>
    <string name="message_temp_password_sent">입력하신 이메일로 임시 비밀번호가 전송되었습니다.</string>
    <string name="hint_current_password">현재 비밀번호 혹은 임시 비밀번호</string>
    <string name="hint_new_password">새 비밀번호 (8~16자 이내)</string>
    <string name="hint_confirm_new_password">새 비밀번호 확인</string>
    <string name="message_new_password_not_match">입력하신 새 비밀번호가 서로 일치하지 않습니다.</string>
    <string name="message_current_password_not_match">입력하신 현재 비밀번호가 틀립니다.</string>
    <string name="message_user_not_exists">존재하지 않는 사용자입니다.</string>
    <string name="message_enter_current_password">현재 비밀번호를 입력해 주세요. (임시번호 발급 시 임시비밀번호를 입력)</string>
    <string name="message_enter_new_password">새로운 비밀번호를 입력해 주세요.</string>
    <string name="message_wrong_bithdate_format">잘못된 생년월일 입니다.</string>
    <string name="message_select_gender">성별을 선택해 주세요.</string>
    <string name="message_enter_birthdate">생년월일을 입력해 주세요.</string>
    <string name="message_email_currently_joined">현재 가입된 이메일입니다.</string>
    <string name="message_email_currently_not_joined">현재 가입되지 않은 이메일입니다.</string>
    <string name="hint_confirm_password">비밀번호 확인</string>
    <string name="no_rank">없음</string>
    <string name="message_password_not_match">비밀번호가 일치하지 않습니다.</string>
    <string name="menu_monthly_chart">월별 그래프</string>
    <string name="menu_daily_chart">일별 그래프</string>
    <string name="join_membership">회원가입</string>
    <string name="my_brand">내 브랜드</string>
    <string name="my_page">내 정보</string>
    <string name="evaluate">평가하기</string>
    <string name="tou_policy">이용약관</string>
    <string name="privacy_policy">개인정보 수집이용 약관</string>
    <string name="message_facebook_tempPasswd">페이스북으로 로그인한 계정은 임시비밀번호를 발급 받을 수 없습니다.</string>
    <string name="hint_search">검색</string>
    <string name="label_search">검색</string>
    <string name="menu_my_page">마이 페이지</string>
    <string name="menu_camera">카메라</string>
    <string name="menu_album">앨범</string>
    <string name="message_cancel_writing">글작성을 취소하시겠습니까? 취소 시, 작성된 글은 삭제 됩니다.</string>
    <string name="coupon_store">사용처</string>
    <string name="coupon_use">쿠폰 안내</string>
    <string name="coupon_info">사용안내</string>
    <string name="message_coupon_issued">쿠폰이 발급되었습니다. \'내 페이지\'에 \'내 브랜드 쿠폰\'을 확인해 주세요</string>
    <string name="select_pic">사진을 선택하세요</string>
    <string name="report">신고</string>
    <string name="modify">수정</string>
    <string name="delete">삭제</string>
    <string name="message_delete_feed">해당글을 삭제 하시겠습니까?</string>
    <string name="message_failed">오류가 발생하여 해당 작업을 실행 할 수 없습니다.</string>
    <string name="senderId"></string>
    <string name="brand_star">브랜드스타</string>
    <string name="message_not_enough_brand_star">소유한 브랜드 스타가 모자릅니다.</string>
</resources>



