<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="kr.co.toyappfactory.gosung.Join">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:id="@+id/rel_account_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/gray"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="26dp"
                    android:layout_marginLeft="29dp"
                    android:src="@drawable/id_info_tit"/>
                <EditText
                    android:id="@+id/edittext_join_email"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="11dp"
                    android:layout_marginLeft="29dp"
                    android:inputType="textEmailAddress"
                    android:hint="@string/email_hint"/>
                <EditText
                    android:id="@+id/edittext_join_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="29dp"
                    android:inputType="textPassword"
                    android:hint="@string/password_hint"/>

                <EditText
                    android:id="@+id/edittext_join_password_confirm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="29dp"
                    android:inputType="textPassword"
                    android:hint="@string/hint_confirm_password"/>
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/id_info_noti"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/rel_birthdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="29dp"
                    android:src="@drawable/birth_info_tit"/>
                <EditText
                    android:id="@+id/edittext_join_birthdate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="11dp"
                    android:layout_marginLeft="29dp"
                    android:inputType="number"
                    android:hint="@string/birthdate_hint"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/rel_gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/gray"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="29dp"
                    android:src="@drawable/gender_info_tit"
                    android:layout_gravity="center_vertical"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical">
                    <RadioGroup
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">
                        <RadioButton
                            android:id="@+id/radiobutton_male"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/male"
                            android:layout_weight="1"
                            android:textSize="15dp"/>
                        <RadioButton
                            android:id="@+id/radiobutton_female"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/female"
                            android:layout_weight="1"
                            android:textSize="15dp"/>
                        <RadioButton
                            android:id="@+id/radiobutton_other"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/other"
                            android:layout_weight="1"
                            android:textSize="15dp"/>
                    </RadioGroup>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/rel_policy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="29dp"
                    android:src="@drawable/terms_info_tit"/>
                <LinearLayout
                    android:id="@+id/lin_termsofuse"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="29dp"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/textview_join_termsofuse"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"

                        android:text="@string/termsofuse"
                        android:textSize="15sp"/>
                    <CheckBox
                        android:id="@+id/checkbox_terms_of_use_agree"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="157dp"
                        android:text="@string/agree"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/lin_privacy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="29dp"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/textview_join_privacy"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"

                        android:text="@string/privacy"
                        android:textSize="15sp"/>
                    <CheckBox
                        android:id="@+id/checkbox_privacy"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="100dp"
                        android:text="@string/agree"/>

                </LinearLayout>
                <CheckBox
                    android:id="@+id/checkbox_agree_all"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="270dp"
                    android:text="@string/agree_all"/>
            </LinearLayout>

            <Button
                android:id="@+id/button_join"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginTop="3dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/next_btn"/>
        </LinearLayout>

    </ScrollView>

</RelativeLayout>
