<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="kr.co.toyappfactory.gosung.PhoneNumberVerification">

    <TextView
        android:id="@+id/textview_verify_phone_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone_num_verification"
        android:textSize="20dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="20dp"/>
    <TextView
        android:id="@+id/textview_must_enter_phone_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textview_verify_phone_num"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:text="@string/must_enter_phone_num"/>
    <LinearLayout
        android:id="@+id/lin_phone_num"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textview_must_enter_phone_num"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/edittext_phone_num_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="number"
            android:maxLength="3"/>
        <EditText
            android:id="@+id/edittext_phone_num_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="number"
            android:maxLength="4"/>
        <EditText
            android:id="@+id/edittext_phone_num_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="number"
            android:maxLength="4"/>
        <Button
            android:id="@+id/button_send_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/send_verification_num"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lin_verification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/lin_phone_num"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/edittext_verification_num"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="number"
            android:enabled="false"/>
        <Button
            android:id="@+id/button_verify"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/verify"
            android:enabled="false"/>
    </LinearLayout>
</RelativeLayout>
