<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MyLogInInfo">
    <RelativeLayout
        android:id="@+id/lin_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="30dp"
            android:background="@drawable/nick_change_tit"/>
        <EditText
            android:id="@+id/edittext_name"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="30dp"
            android:hint="@string/name"/>
        <Button
            android:id="@+id/button_change_name"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginTop="60dp"
            android:layout_marginLeft="250dp"
            android:background="@drawable/change_btn" />
    </RelativeLayout>
    <LinearLayout
        android:id="@+id/lin_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/gray">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="30dp"
                android:background="@drawable/pw_change_tit"/>
            <EditText
                android:id="@+id/edittext_current_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="62dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:hint="@string/hint_current_password"
                android:inputType="textPassword"/>
            <EditText
                android:id="@+id/edittext_new_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="98dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"

                android:hint="@string/hint_new_password"
                android:inputType="textPassword"/>
            <EditText
                android:id="@+id/edittext_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="135dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"

                android:hint="@string/hint_confirm_new_password"
                android:inputType="textPassword"/>

        </RelativeLayout>
        <Button
            android:id="@+id/button_change_password"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="30dp"

            android:background="@drawable/change_pw_btn" />
    </LinearLayout>

    <Button
        android:id="@+id/button_logout"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="50dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/logout_btn" />


    <RelativeLayout
        android:id="@+id/lin_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="horizontal">

    </RelativeLayout>
</LinearLayout>
